src/objects/Medical_Questions__c.object
<CustomObject>
    <description>It holds the medical questions for the diagnosis entered by the submitter.</description>
    <fields>
        <fullName>Condition_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the Diagnosis name for medical questions</description>
        <label>Condition Description</label>
        <referenceTo>Condition_Description__c</referenceTo>
        <relationshipLabel>Medical Questions</relationshipLabel>
        <relationshipName>Medical_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Condition__c</fullName>
        <description>It contains wish child diagnosis current condition</description>
        <label>Current Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epilepsy_picklist__c</fullName>
        <description>It holds the value of Epilepsy picklit values</description>
        <label>Epilepsy picklist</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Picklist_values__c</fullName>
        <label>Picklist values</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question for diagnosis</description>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_to_Chapter__c</fullName>
        <description>It holds the recommendation for kids based on travel list they selected</description>
        <label>Recommendation to Chapter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>It contains the sort order for medical questions</description>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wrapper_Variable__c</fullName>
        <description>It will hold the wrapper class variable name.</description>
        <label>Wrapper Variable</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Medical Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Condition_Description__c</columns>
        <columns>Current_Condition__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Epilepsy_picklist__c</columns>
        <columns>Picklist_values__c</columns>
        <columns>Question__c</columns>
        <columns>Recommendation_to_Chapter__c</columns>
        <columns>Wrapper_Variable__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMQ-{0000}</displayFormat>
        <label>Medical Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Questions</pluralLabel>
    <recordTypes>
        <fullName>Medical_Questions</fullName>
        <active>true</active>
        <description>It contains medical questions</description>
        <label>Medical Questions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Travel_Algorithm</fullName>
        <active>true</active>
        <description>It contains the list of current conditions for travel algorithm</description>
        <label>Travel Algorithm</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>